# godot_imgui_native_cpp

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE
example/: dvu_sans_mono.ttf.import  icon.svg.import  project.godot  scene.gd  scene.tscn
example/imgui/: gui_shader.gdshader  gui_shader.tres  imgui.gdextension
include/godot_imgui_native/: ImGui.hpp  ImGuiMesh.hpp  gdextension_registration.h
src/: ImGui.cpp  ImGuiMesh.cpp  ImGui_bindings.cpp  ImGui_events.cpp  ImGui_mesh.cpp  Register_ImGui_class.cpp  gdextension_registration.cpp
